--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
 </head>
 <body>
   <h1>Test</h1>
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+  <script>
+    $(function() {
+      console.log( $ );
+    });
+  </script>
 </body>
 </html>
