--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Test</h1>
+  <div class="test-container">
+    <h1 class="test-content">TEST</h1>
+  </div>
+  <style>
+    html, body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    :after, :before {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+    .test-container {
+      position: relative;
+      width: 100%;
+      height: 320px;
+      background-color: teal;
+      color: white;
+    }
+    .test-content {
+      text-align: center;
+      margin: 0;
+      width: 100%;
+      transform: translateY(-50%);
+      position: relative;
+      top: 50%;
+    }
+  </style>
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
