--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       <div class="holx-thumb-container">
         <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
         <div class="holx-meta">
-          <p class="meta-name">Katarina Monika</p>
+          <p class="meta-name">Rezki Bangsawan</p>
         </div>
       </div>
       <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
         <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
       </div>
     </a>
@@ -21,10 +23,12 @@
       <div class="holx-thumb-container">
         <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
         <div class="holx-meta">
-          <p class="meta-name">Katarina Monika</p>
+          <p class="meta-name">Rezki Bangsawan</p>
         </div>
       </div>
       <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
         <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
       </div>
     </a>
@@ -32,10 +36,12 @@
       <div class="holx-thumb-container">
         <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
         <div class="holx-meta">
-          <p class="meta-name">Katarina Monika</p>
+          <p class="meta-name">Rezki Bangsawan</p>
         </div>
       </div>
       <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
         <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
       </div>
     </a>
@@ -43,10 +49,77 @@
       <div class="holx-thumb-container">
         <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
         <div class="holx-meta">
-          <p class="meta-name">Katarina Monika</p>
+          <p class="meta-name">Rezki Bangsawan</p>
         </div>
       </div>
       <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
+        <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
+      </div>
+    </a>
+    <a href="javascript:void(0);" class="holx-anchor">
+      <div class="holx-thumb-container">
+        <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
+        <div class="holx-meta">
+          <p class="meta-name">Rezki Bangsawan</p>
+        </div>
+      </div>
+      <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
+        <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
+      </div>
+    </a>
+    <a href="javascript:void(0);" class="holx-anchor">
+      <div class="holx-thumb-container">
+        <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
+        <div class="holx-meta">
+          <p class="meta-name">Rezki Bangsawan</p>
+        </div>
+      </div>
+      <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
+        <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
+      </div>
+    </a>
+    <a href="javascript:void(0);" class="holx-anchor">
+      <div class="holx-thumb-container">
+        <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
+        <div class="holx-meta">
+          <p class="meta-name">Rezki Bangsawan</p>
+        </div>
+      </div>
+      <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
+        <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
+      </div>
+    </a>
+    <a href="javascript:void(0);" class="holx-anchor">
+      <div class="holx-thumb-container">
+        <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
+        <div class="holx-meta">
+          <p class="meta-name">Rezki Bangsawan</p>
+        </div>
+      </div>
+      <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
+        <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
+      </div>
+    </a>
+    <a href="javascript:void(0);" class="holx-anchor">
+      <div class="holx-thumb-container">
+        <div class="holx-thumb"><img src="sample.png" alt="sample-thumb"></div>
+        <div class="holx-meta">
+          <p class="meta-name">Rezki Bangsawan</p>
+        </div>
+      </div>
+      <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
         <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
       </div>
     </a>
@@ -78,6 +151,9 @@
       text-decoration: none;
       text-align: center;
       color: #FFF;
+    }
+    .holx-anchor:focus {
+      outline: 0;
     }
     .holx-thumb-container {
       position: relative;
@@ -124,15 +200,40 @@
     .holx-story {
       display: none;
     }
+
+    .swal2-popup .swal2-styled:focus {
+      outline: none;
+      box-shadow: none;
+    }
   </style>
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/sweetalert2@7.0.9/dist/sweetalert2.all.js"></script>
+  <!--
+      <div class="holx-story">
+        <img class="holx-story-cover" src="sample.png" alt="sample-thumb">
+        <p class="holx-story-name">Rezki Bangsawan</p>
+        <p class="holx-story-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, aperiam ea dolores vero cum rerum perferendis cupiditate, deleniti repellendus maxime, nam officiis at accusamus. Nostrum aliquid eaque delectus id ea.</p>
+      </div>
+  -->
   <script>
     $(function() {
-      console.log( $ );
+      var $humanTrigger = $('.holx-anchor');
+      $humanTrigger.each(function(i){
+        $(this).on('click', function(e) {
+          var $self = $(this);
+          swal({
+            title: $self.find('.holx-story-name').text(),
+            text: $self.find('.holx-story-body').text(),
+            imageUrl: $self.find('.holx-story-cover').attr('src'),
+            imageWidth: 320,
+            showCancelButton: false,
+            showConfirmButton: false
+          });
+        });
+      });
     });
   </script>
 </body>
